# DatingSim

DatingSim/: CMakeLists.txt  avatarwindow.cpp  avatarwindow.h  avatarwindow.ui  chatwindow.cpp  chatwindow.h  chatwindow.ui  img.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h
